--- a/Frontend/stayfit/public/index.html
+++ b/Frontend/stayfit/public/index.html
@@ -65,7 +65,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link href="styles.css" rel="stylesheet" />
+    <link href="%PUBLIC_URL%/styles.css" rel="stylesheet" />
   </head>
   <body>
     <div id="root"></div>
@@ -140,6 +140,6 @@
       referrerpolicy="no-referrer"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/scrollax@1.0.0/scrollax.min.js"></script>
-    <script src="main.js" type="text/javascript"></script>
+    <script src="%PUBLIC_URL%/main.js" type="text/javascript"></script>
   </body>
 </html>
